--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     compile "org.projectlombok:lombok:1.16.18"
 
     testCompile "org.springframework.boot:spring-boot-starter-test"
-    testCompile "org.testcontainers:testcontainers:1.5.1"
+    testCompile "org.testcontainers:testcontainers:1.6.0"
+    testCompile "org.testcontainers:postgresql:1.6.0"
+
 
 }
